- added feign distance matrix api (didn't test yet) - added broadcast topic
